# aula15_bootcamp

./: README.md  pyproject.toml
Collector/: main.py
Collector/datasource/: api.py
Collector/tools/: retry.py
Collector/tools/aws/: client.py
FakeApi/: start.py
